Migrate to Side Panel format: Update manifest, add background script, adjust UI

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,10 +2,16 @@
     "manifest_version": 3,
     "name": "GORewrite",
     "version": "1.0",
-    "action": {
-        "default_popup": "index.html"
+    "action": {},
+    "background": {
+        "service_worker": "background.js",
+        "type": "module"
+    },
+    "side_panel": {
+        "default_path": "index.html"
     },
     "permissions": [
-        "clipboardWrite"
+        "clipboardWrite",
+        "sidePanel"
     ]
 }
