--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,12 @@
 {
     "manifest_version": 3,
     "name": "GORewrite",
-    "version": "1.0",
+    "version": "1.1",
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
     "action": {},
     "background": {
         "service_worker": "background.js",
