--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,17 @@
 {
     "manifest_version": 3,
     "name": "GORewrite",
-    "version": "1.0",
-    "action": {
-        "default_popup": "index.html"
+    "version": "1.1",
+    "action": {},
+    "background": {
+        "service_worker": "background.js",
+        "type": "module"
+    },
+    "side_panel": {
+        "default_path": "index.html"
     },
     "permissions": [
-        "clipboardWrite"
+        "clipboardWrite",
+        "sidePanel"
     ]
 }
