--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,23 @@
 ﻿{
-    "manifest_version":  3,
-    "name":  "GORewrite",
-    "version":  "39.1.8",
-    "icons":  {
-                  "16":  "icons/icon16.png",
-                  "48":  "icons/icon48.png",
-                  "128":  "icons/icon128.png"
-              },
-    "action":  {
-
-               },
-    "background":  {
-                       "service_worker":  "background.js",
-                       "type":  "module"
-                   },
-    "side_panel":  {
-                       "default_path":  "index.html"
-                   },
-    "permissions":  [
-                        "clipboardWrite",
-                        "sidePanel",
-                        "downloads"
-                    ]
+    "manifest_version": 3,
+    "name": "GORewrite",
+    "version": "39.1.12",
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
+    "action": {},
+    "background": {
+        "service_worker": "background.js",
+        "type": "module"
+    },
+    "side_panel": {
+        "default_path": "index.html"
+    },
+    "permissions": [
+        "clipboardWrite",
+        "sidePanel",
+        "downloads"
+    ]
 }
