--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
     "manifest_version": 3,
-    "name": "GORewrite",
+    "name": "GORewrite (Dev)",
     "version": "1.5.0",
     "icons": {
         "16": "icons/icon16.png",
