--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "go-board-extension",
     "private": true,
-    "version": "1.6.0",
+    "version": "39.1.15",
     "type": "module",
     "scripts": {
         "dev": "vite --host",
@@ -10,12 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "gif.js": "^0.2.0",
+        "gifshot": "^0.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@types/gif.js": "^0.2.5",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
