--- a/dist_prod/manifest.json
+++ b/dist_prod/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
     "manifest_version": 3,
-    "name": "GORewrite (Dev)",
+    "name": "GORewrite",
     "version": "2.0.2",
     "icons": {
         "16": "icons/icon16.png",
