--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
     "manifest_version": 3,
-    "name": "GORewrite (Dev)",
-    "version": "2.0.2",
+    "name": "GORewrite",
+    "version": "2.0.3",
     "icons": {
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
